--- a/grid.css
+++ b/grid.css
@@ -1,34 +1,11 @@
-.wrapper {
-  width: 600px;
-  margin: 0 auto;
+div {
+  margin: .5px;
+  width: 50px;
+  height: 50px;
+  background-color: blue;
+  display: inline-block;
 }
 
-#slider {
-  width: 600px;
-  height: 400px;
-  overflow: hidden;
-  margin: 30px auto;
-}
-
-#slider>img {
-  width: 600px;
-  height: 400px;
-  float: left;
-  display: none;
-}
-
-a {
-  padding: 5px 10px;
-  background-color: #F0F0F0;
-  margin-top: 30px;
-  text-decoration: none;
-  color: #666;
-}
-
-a.left {
-  float: left;
-}
-
-a.right {
-  float: right;
+#wrapper {
+  position: relative;
 }
