--- a/grid.css
+++ b/grid.css
@@ -1,11 +1,14 @@
 div {
-  margin: .5px;
   width: 50px;
   height: 50px;
   background-color: blue;
   display: inline-block;
+  margin: .5px;
+  clear: both;
 }
 
-#wrapper {
-  position: relative;
+button {
+  position: absolute;
+  padding: 10px;
+  margin: 10px;
 }
