--- a/grid.css
+++ b/grid.css
@@ -1,10 +1,11 @@
 table {
   border-collapse: collapse;
+  display: block;
 }
 
 td {
-  width: 50px;
-  height: 50px;
+  width: 25px;
+  height: 25px;
   background-color: blue;
   display: inline-block;
   margin: .5px;
